major refactoring to adapt to changes in c entities